# saturation

./: Cargo.toml  README.md
src/: atanmoid.rs  cache_table.rs  cache_tree.rs  curve_cache.rs  diodes.rs  erfmoid.rs  finite.rs  lib.rs  linmoid.rs  plot.rs  pythmoid.rs  rtf.rs  sinh_atanmoid.rs  soft_exp.rs  tanh.rs  tubes.rs
src/diode/: diode_clipper.rs  mod.rs  model.rs
src/jfet/: jfet_buffer.rs  jfets.rs  mod.rs  model.rs
src/pentode/: cache.rs  calc.rs  filter.rs  mod.rs  model.rs  param.rs
src/triode/: cache.rs  calc.rs  filter.rs  mod.rs  model.rs  param.rs
