[package]
name = "saturation"
version = "0.1.0"
edition = "2024"

[dependencies]
num = "0.4.3"
moddef = "0.2.6"
serde = {version = "1.0.219", features = ["derive"]}
real_time_fir_iir_filters = {version = "1.2.4", optional = true, default-features = false}
libm = {version = "0.2.11", optional = true}

[dev-dependencies]
plotters = "0.3.7"
linspace = "0.1.1"

[features]
default = [
    "soft_exp",
    "tubes",
    "diodes",
    "libm"
]
soft_exp = []
tubes = ["dep:real_time_fir_iir_filters", "real_time_fir_iir_filters/first_order_rc"]
diodes = []
libm = ["dep:libm"]