[package]
name = "saturation"
version = "0.2.2"
authors = ["Sigurd Sætherø Spangelo"]
edition = "2024"
license = "MIT"
description = "Real-time saturation and clipping designed for use with vst's"
repository = "https://github.com/sigurd4/saturation"
keywords = ["clipping", "vst", "real-time", "distortion", "overdrive"]
categories = ["algorithms", "mathematics", "multimedia::audio", "no-std::no-alloc"]
exclude = ["plots/"]

[dependencies]
num = "0.4.3"
moddef = "0.2.6"
serde = {version = "1.0.219", features = ["derive"]}
real_time_fir_iir_filters = {version = "1.3.3", optional = true, default-features = false}
libm = {version = "0.2.15", optional = true}

[dev-dependencies]
plotters = "0.3.7"
linspace = "0.2.1"

[features]
default = [
    "alloc",
    "soft_exp",
    "tubes",
    "diodes",
    "jfets",
    "libm"
]
alloc = []
soft_exp = []
tubes = ["dep:real_time_fir_iir_filters", "real_time_fir_iir_filters/first_order_rc"]
diodes = []
jfets = ["soft_exp"]
libm = ["dep:libm"]